--- a/client/src/styles/tailwind.css
+++ b/client/src/styles/tailwind.css
@@ -18,6 +18,7 @@
 }
 
 @layer components {
+  /* Input field */
   .input-error {
     @apply text-salmon text-base;
   }
@@ -31,7 +32,35 @@
     @apply w-full rounded-lg h-11 bg-slate-300 px-3;
   }
 
+  /* Submit button */
   .btn {
     @apply bg-salmon w-max py-1 px-6 rounded-full text-slate-400 text-xl font-medium uppercase;
+  }
+
+  /* Loader */
+  .loader-circles {
+    @apply absolute border-4 border-white border-solid border-opacity-100 rounded-full;
+    animation: loader 1s cubic-bezier(0, 0.2, 0.8, 1) infinite;
+  }
+
+  .loader-circles:nth-child(2) {
+    animation-delay: -0.5s;
+  }
+
+  @keyframes loader {
+    0% {
+      top: 36px;
+      left: 36px;
+      width: 0;
+      height: 0;
+      opacity: 1;
+    }
+    100% {
+      top: 0px;
+      left: 0px;
+      width: 72px;
+      height: 72px;
+      opacity: 0;
+    }
   }
 }
