--- a/client/src/styles/tailwind.css
+++ b/client/src/styles/tailwind.css
@@ -122,4 +122,17 @@
   .marker {
     @apply hover:text-salmon cursor-pointer transition-all;
   }
+
+  .list-ornament {
+    @apply relative;
+  }
+
+  .list-ornament:before {
+    content: '';
+    @apply h-full w-0.5 bg-salmon absolute block top-0 -left-6;
+  }
+
+  .main-wrapper {
+    @apply sm:p-10 sm:pl-12 p-3 sm:mb-36 mb-28;
+  }
 }
